force-app/main/default/objects/OrderItem/fields/Annex__c.field-meta.xml
<CustomField>
    <fullName>Annex__c</fullName>
    <formula>IF(
    ISBLANK(Annex_Lookup__r.Sage_ID__c),
    Annex_Lookup__r.Name,
    Annex_Lookup__r.Sage_ID__c
)</formula>
    <label>Annex Code</label>
    <type>Text</type>
</CustomField>