force-app/main/default/objects/OrderItem/fields/Annex_Date__c.field-meta.xml
<CustomField>
    <fullName>Annex_Date__c</fullName>
    <formula>Annex_Lookup__r.CreatedDate</formula>
    <label>Annex Date</label>
    <type>DateTime</type>
</CustomField>