force-app/main/default/objects/OrderItem/fields/Annex_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Annex_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annex</label>
    <referenceTo>Annex__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>