force-app/main/default/objects/OrderItem/fields/annex_tax_group_changed_tech__c.field-meta.xml
<CustomField>
    <fullName>annex_tax_group_changed_tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>annex tax group changed tech</label>
    <type>Checkbox</type>
</CustomField>