force-app/main/default/objects/OrderItem/fields/Data_Migration_GUID__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_GUID__c</fullName>
    <description>Field used for data migration from Microsoft Dynamics</description>
    <externalId>true</externalId>
    <label>Data Migration GUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>