force-app/main/default/objects/OrderItem/fields/Detail_Number__c.field-meta.xml
<CustomField>
    <fullName>Detail_Number__c</fullName>
    <label>Detail Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>