force-app/main/default/objects/OrderItem/fields/From_SA__c.field-meta.xml
<CustomField>
    <fullName>From_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From SA</label>
    <type>Checkbox</type>
</CustomField>