force-app/main/default/objects/OrderItem/fields/Has_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Has_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Shipment</label>
    <type>Checkbox</type>
</CustomField>