force-app/main/default/objects/OrderItem/fields/Is_Eligible_For_Sage_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_For_Sage_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eligible For Sage Sync</label>
    <type>Checkbox</type>
</CustomField>