force-app/main/default/objects/OrderItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>This field is to be used in FSL Flow as a workaround for the limitations</description>
    <formula>Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>