force-app/main/default/objects/OrderItem/fields/Product_Name_FR__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_FR__c</fullName>
    <formula>Product2.Product_Name_FR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name FR</label>
    <type>Text</type>
</CustomField>