force-app/main/default/objects/OrderItem/fields/Product_Name_with_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_with_Quantity__c</fullName>
    <formula>Product_Name__c &amp; BR() &amp; &apos;Quantity: &apos; &amp; TEXT(Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name with Quantity</label>
    <type>Text</type>
</CustomField>