force-app/main/default/objects/OrderItem/fields/Product_Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Sage_ID__c</fullName>
    <formula>Product2.Sage_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sage ID</label>
    <type>Text</type>
</CustomField>