force-app/main/default/objects/OrderItem/fields/Product_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Work_Type__c</fullName>
    <formula>CASESAFEID(Product2.Work_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Work Type</label>
    <type>Text</type>
</CustomField>