force-app/main/default/objects/OrderItem/fields/Quantity_Backordered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Backordered__c</fullName>
    <label>Quantity Backordered</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>