force-app/main/default/objects/OrderItem/fields/Quantity_Returned__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Returned__c</fullName>
    <label>Quantity Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>