force-app/main/default/objects/OrderItem/fields/Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>