force-app/main/default/objects/OrderItem/fields/Quantity_Undelivered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Undelivered__c</fullName>
    <label>Quantity Undelivered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>