force-app/main/default/objects/OrderItem/fields/Required_Resource__c.field-meta.xml
<CustomField>
    <fullName>Required_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>