force-app/main/default/objects/OrderItem/fields/Return_Bin__c.field-meta.xml
<CustomField>
    <fullName>Return_Bin__c</fullName>
    <label>Return Bin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>