force-app/main/default/objects/OrderItem/fields/Return_Comments__c.field-meta.xml
<CustomField>
    <fullName>Return_Comments__c</fullName>
    <label>Return Comments</label>
    <type>TextArea</type>
</CustomField>