force-app/main/default/objects/OrderItem/fields/Return_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_Location__c</fullName>
    <label>Return Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>