force-app/main/default/objects/OrderItem/fields/Return_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Return_Location_Name__c</fullName>
    <label>Return Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>