force-app/main/default/objects/OrderItem/fields/ReturnLocation__c.field-meta.xml
<CustomField>
    <fullName>ReturnLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Order Products (Return Location)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>