force-app/main/default/objects/OrderItem/fields/Sage_API_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sage_API_Error_Message__c</fullName>
    <label>Sage API Error Message</label>
    <type>TextArea</type>
</CustomField>