force-app/main/default/objects/OrderItem/fields/Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sage ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>