force-app/main/default/objects/OrderItem/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>