force-app/main/default/objects/OrderItem/fields/Ship_Track__c.field-meta.xml
<CustomField>
    <fullName>Ship_Track__c</fullName>
    <description>Holds the Ship Track received from Sage (this field is Sage_ID__c of an Annex record)</description>
    <label>Ship Track</label>
    <length>30</length>
    <type>Text</type>
</CustomField>