force-app/main/default/objects/OrderItem/fields/Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item__c</fullName>
    <description>Used as workaround for FSL Limitations</description>
    <formula>Product2.Stock_Item__c</formula>
    <label>Stock Item</label>
    <type>Checkbox</type>
</CustomField>