force-app/main/default/objects/OrderItem/fields/Tech_Field_Update_from_Order__c.field-meta.xml
<CustomField>
    <fullName>Tech_Field_Update_from_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Field Update from Order</label>
    <type>Checkbox</type>
</CustomField>