force-app/main/default/objects/OrderItem/fields/Travel_Fees_Description__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fees_Description__c</fullName>
    <label>Travel Fees Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>