force-app/main/default/objects/OrderItem/fields/WOLI_is_created__c.field-meta.xml
<CustomField>
    <fullName>WOLI_is_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WOLI is created</label>
    <type>Checkbox</type>
</CustomField>